--- a/frontend/src/components/Email/EmailList/EmailList.css
+++ b/frontend/src/components/Email/EmailList/EmailList.css
@@ -20,7 +20,8 @@
 
 .email-list-container{
     width: 100%;
-    height: 100%;
+    /* height: 60%; */
+    flex: 1;
     border: 2px solid black;
     display: flex;
     flex-direction: row;
